# bim-portal-deutschland-visu

./: LICENSE  README.md  pyproject.toml
docs/: poetry_shortcurts.md
src/: main.py
src/bim_portal_deutschland_visu/: __init__.py
src/bim_portal_deutschland_visu/models/: __init__.py  filter_.py  kurzinformation.py  merkmal.py  merkmal_bookmarked.py  merkmal_boundary_values_item.py  merkmal_connected_properties_item.py  merkmal_connected_properties_item_names_in_language_item.py  merkmal_creators_language.py  merkmal_definitions_in_language_item.py  merkmal_descriptions_in_language_item.py  merkmal_digital_format_item.py  merkmal_examples_in_language_item.py  merkmal_group_of_properties_item.py  merkmal_group_of_properties_item_names_in_language_item.py  merkmal_list_of_possible_values_in_language_item.py  merkmal_metadata.py  merkmal_names_in_language_item.py  merkmal_names_of_the_defining_values_item.py  merkmal_observed.py  merkmal_parameters_of_the_dynamic_property_item.py  merkmal_parameters_of_the_dynamic_property_item_names_in_language_item.py  merkmal_physical_quantity_item.py  merkmal_relation_of_the_property_identifiers_in_the_interconnected_dictionaries_item.py  merkmal_replaced_by_item.py  merkmal_replaced_by_item_names_in_language_item.py  merkmal_replaces_item.py  merkmal_replaces_item_names_in_language_item.py  merkmal_symbols_of_the_property_in_a_given_property_group_item.py  merkmal_symbols_of_the_property_in_a_given_property_group_item_group_names_item.py  merkmal_tags_item.py  merkmal_tags_item_tag.py  merkmal_text_format.py  merkmalsfiltergruppe.py  (+21 more)
(+6 files in other folders)
